--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.premium.PremiumActivity"></activity>
+        <activity
+            android:name=".ui.report.ReportActivity"
+            android:label="@string/title_activity_report"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".ui.premium.PremiumActivity" />
         <activity
             android:name=".ui.update_password.UpdatePasswordActivity"
             android:label="Update Password" />
